--- a/.travis.yml
+++ b/.travis.yml
@@ -3,26 +3,27 @@ rvm: 2.4.0
 os: osx
 osx_image: xcode11.3
 before_install: bundle install --deployment
+sudo: true
 # cache:
 #   directories:
 #     - vendor/bundle
 #     - /usr/local/bin/
 #     - /Applications
 stage:
-- syntax
-- test
+# - syntax
+# - test
 - dry-run
 - run
 
 jobs:
   include:
-    - stage: syntax
-      name: syntax
-      script: echo "jobs syntax test"
-    - stage: test
-      name: test
-      script:
-        - bundle exec rake spec
+    # - stage: syntax
+    #   name: syntax
+    #   script: echo "jobs syntax test"
+    # - stage: test
+    #   name: test
+    #   script:
+    #     - bundle exec rake spec
     - stage: dry-run
       name: dry-run
       script:
