--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm: 2.4.0
 os: osx
 osx_image: xcode11.3
 before_install: bundle install --deployment
-sudo: required
+script: travis_wait 30 script.sh
 cache:
   directories:
     - vendor/bundle
